--- a/index.html
+++ b/index.html
@@ -38,141 +38,169 @@
 </header>
 
 <main id="app" hidden>
-  <nav class="tabs">
-    <button class="tab active" data-tab="capture">Neuer Eintrag</button>
-    <button class="tab" data-tab="history">Verlauf</button>
-    <button class="tab" data-tab="analysis">Analyse</button>
-    <button class="tab" data-tab="settings">Einstellungen</button>
-  </nav>
-
-  <section id="capture" class="tabPanel">
+  <!-- NEUER STARTSCREEN -->
+  <section id="startScreen" class="tabPanel">
     <div class="card">
-      <h2>Eintrag erfassen</h2>
-      <form id="sessionForm">
-        <div class="grid">
-          <div class="field">
-            <label for="dt">Datum &amp; Uhrzeit</label>
-            <input id="dt" type="datetime-local" required />
+      <h2>Willkommen bei Wcloud</h2>
+      <p class="muted">Wähle, womit du starten möchtest.</p>
+      <div class="row">
+        <button id="startEntriesAnalyse">Einträge &amp; Analyse</button>
+        <button id="startWcloudWheel" class="secondary">wcloud-wheel</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- Bisherige App-Hülle (Tabs + Inhalte) -->
+  <div id="mainShell">
+    <nav class="tabs">
+      <button class="tab active" data-tab="capture">Neuer Eintrag</button>
+      <button class="tab" data-tab="history">Verlauf</button>
+      <button class="tab" data-tab="analysis">Analyse</button>
+      <button class="tab" data-tab="wheel">wcloud-wheel</button>
+      <button class="tab" data-tab="settings">Einstellungen</button>
+    </nav>
+
+    <section id="capture" class="tabPanel">
+      <div class="card">
+        <h2>Eintrag erfassen</h2>
+        <form id="sessionForm">
+          <div class="grid">
+            <div class="field">
+              <label for="dt">Datum &amp; Uhrzeit</label>
+              <input id="dt" type="datetime-local" required />
+            </div>
+            <div class="field">
+              <label for="content">Inhalt</label>
+              <select id="content" required>
+                <option value="Wcloud112">Wcloud112</option>
+                <option value="Wcloud113">Wcloud113</option>
+                <option value="Wcloud114">Wcloud114</option>
+                <option value="Wcloud115">Wcloud115</option>
+                <option value="Wcloud116">Wcloud116</option>
+                <option value="Wcloud117">Wcloud117</option>
+              </select>
+            </div>
+            <div class="field">
+              <label for="personName">Name</label>
+              <input id="personName" type="text" placeholder="z. B. Maida" />
+            </div>
           </div>
-          <div class="field">
-            <label for="content">Inhalt</label>
-            <select id="content" required>
-              <option value="Wcloud112">Wcloud112</option>
-              <option value="Wcloud113">Wcloud113</option>
-              <option value="Wcloud114">Wcloud114</option>
-              <option value="Wcloud115">Wcloud115</option>
-              <option value="Wcloud116">Wcloud116</option>
-              <option value="Wcloud117">Wcloud117</option>
-            </select>
+
+          <fieldset class="field">
+            <legend>Orgasmus (Feuchtigkeit)</legend>
+            <div class="chips">
+              <label><input type="radio" name="wet" value="Sehr feucht" required />Sehr feucht</label>
+              <label><input type="radio" name="wet" value="Feucht" />Feucht</label>
+              <label><input type="radio" name="wet" value="Weniger feucht" />Weniger feucht</label>
+              <label><input type="radio" name="wet" value="Trocken" />Trocken</label>
+            </div>
+          </fieldset>
+
+          <fieldset class="field">
+            <legend>Geschlecht des Inhalts</legend>
+            <div class="chips">
+              <label><input type="radio" name="gender" value="Männlich" required />Männlich</label>
+              <label><input type="radio" name="gender" value="Weiblich" />Weiblich</label>
+            </div>
+          </fieldset>
+
+          <fieldset class="field">
+            <legend>Begleitender Porno?</legend>
+            <div class="chips">
+              <label><input type="radio" name="porn" value="Mit" required />Mit</label>
+              <label><input type="radio" name="porn" value="Ohne" />Ohne</label>
+            </div>
+          </fieldset>
+
+          <div class="row">
+            <button type="submit">Speichern</button>
+            <button type="reset" class="secondary">Zurücksetzen</button>
           </div>
-          <div class="field">
-            <label for="personName">Name</label>
-            <input id="personName" type="text" placeholder="z. B. Maida" />
+        </form>
+      </div>
+    </section>
+
+    <section id="history" class="tabPanel hidden">
+      <div class="card">
+        <h2>Verlauf</h2>
+        <div class="row wrap">
+          <input id="searchDate" type="date" />
+          <select id="filterContent">
+            <option value="">Alle Inhalte</option>
+            <option>Wcloud112</option><option>Wcloud113</option><option>Wcloud114</option>
+            <option>Wcloud115</option><option>Wcloud116</option><option>Wcloud117</option>
+          </select>
+          <select id="filterGender">
+            <option value="">Alle Geschlechter</option>
+            <option>Männlich</option><option>Weiblich</option>
+          </select>
+          <select id="filterPorn">
+            <option value="">Mit/Ohne Porno</option>
+            <option>Mit</option><option>Ohne</option>
+          </select>
+          <button id="clearFilters" class="secondary">Filter löschen</button>
+        </div>
+        <div id="historyList" class="list"></div>
+      </div>
+    </section>
+
+    <section id="analysis" class="tabPanel hidden">
+      <div class="card">
+        <h2>Analyse</h2>
+        <div id="statsSummary" class="summary"></div>
+
+        <h3>Häufigkeit pro Kalendertag</h3>
+        <div id="perDay" class="table"></div>
+
+        <h3>Wochentage</h3>
+        <div id="weekdayBars" class="bars"></div>
+
+        <div class="grid two">
+          <div>
+            <h3>Geschlecht</h3>
+            <div id="genderBars" class="bars"></div>
+          </div>
+          <div>
+            <h3>Begleitender Porno</h3>
+            <div id="pornBars" class="bars"></div>
           </div>
         </div>
 
-        <fieldset class="field">
-          <legend>Orgasmus (Feuchtigkeit)</legend>
-          <div class="chips">
-            <label><input type="radio" name="wet" value="Sehr feucht" required />Sehr feucht</label>
-            <label><input type="radio" name="wet" value="Feucht" />Feucht</label>
-            <label><input type="radio" name="wet" value="Weniger feucht" />Weniger feucht</label>
-            <label><input type="radio" name="wet" value="Trocken" />Trocken</label>
-          </div>
-        </fieldset>
+        <h3>Wcloud-Inhalte</h3>
+        <div id="contentBars" class="bars"></div>
 
-        <fieldset class="field">
-          <legend>Geschlecht des Inhalts</legend>
-          <div class="chips">
-            <label><input type="radio" name="gender" value="Männlich" required />Männlich</label>
-            <label><input type="radio" name="gender" value="Weiblich" />Weiblich</label>
-          </div>
-        </fieldset>
+        <h3>Namen</h3>
+        <div id="nameBars" class="bars"></div>
 
-        <fieldset class="field">
-          <legend>Begleitender Porno?</legend>
-          <div class="chips">
-            <label><input type="radio" name="porn" value="Mit" required />Mit</label>
-            <label><input type="radio" name="porn" value="Ohne" />Ohne</label>
-          </div>
-        </fieldset>
+        <h3>Feuchtigkeits-Level</h3>
+        <div id="wetBars" class="bars"></div>
 
         <div class="row">
-          <button type="submit">Speichern</button>
-          <button type="reset" class="secondary">Zurücksetzen</button>
-        </div>
-      </form>
-    </div>
-  </section>
-
-  <section id="history" class="tabPanel hidden">
-    <div class="card">
-      <h2>Verlauf</h2>
-      <div class="row wrap">
-        <input id="searchDate" type="date" />
-        <select id="filterContent">
-          <option value="">Alle Inhalte</option>
-          <option>Wcloud112</option><option>Wcloud113</option><option>Wcloud114</option>
-          <option>Wcloud115</option><option>Wcloud116</option><option>Wcloud117</option>
-        </select>
-        <select id="filterGender">
-          <option value="">Alle Geschlechter</option>
-          <option>Männlich</option><option>Weiblich</option>
-        </select>
-        <select id="filterPorn">
-          <option value="">Mit/Ohne Porno</option>
-          <option>Mit</option><option>Ohne</option>
-        </select>
-        <button id="clearFilters" class="secondary">Filter löschen</button>
-      </div>
-      <div id="historyList" class="list"></div>
-    </div>
-  </section>
-
-  <section id="analysis" class="tabPanel hidden">
-    <div class="card">
-      <h2>Analyse</h2>
-      <div id="statsSummary" class="summary"></div>
-
-      <h3>Häufigkeit pro Kalendertag</h3>
-      <div id="perDay" class="table"></div>
-
-      <h3>Wochentage</h3>
-      <div id="weekdayBars" class="bars"></div>
-
-      <div class="grid two">
-        <div>
-          <h3>Geschlecht</h3>
-          <div id="genderBars" class="bars"></div>
-        </div>
-        <div>
-          <h3>Begleitender Porno</h3>
-          <div id="pornBars" class="bars"></div>
+          <button id="exportCsv" class="secondary">CSV exportieren</button>
         </div>
       </div>
+    </section>
 
-      <h3>Wcloud-Inhalte</h3>
-      <div id="contentBars" class="bars"></div>
-
-      <h3>Namen</h3>
-      <div id="nameBars" class="bars"></div>
-
-      <h3>Feuchtigkeits-Level</h3>
-      <div id="wetBars" class="bars"></div>
-
-      <div class="row">
-        <button id="exportCsv" class="secondary">CSV exportieren</button>
+    <!-- NEUES wcloud-wheel PANEL -->
+    <section id="wheel" class="tabPanel hidden">
+      <div class="card">
+        <h2>wcloud-wheel</h2>
+        <p class="muted">Hier erscheinen zufällige Bilder aus deinem Pool (z. B. Google Drive).</p>
+        <div class="row">
+          <button id="wheelRandomBtn">60 zufällige Bilder anzeigen</button>
+        </div>
+        <div id="wheelGrid" class="wheelGrid"></div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="settings" class="tabPanel hidden">
-    <div class="card">
-      <h2>Einstellungen</h2>
-      <p class="muted">Hier kannst du die gesamte Datenbank löschen. Diese Aktion kann nicht rückgängig gemacht werden.</p>
-      <button id="clearAll" class="danger">Alle Daten löschen</button>
-    </div>
-  </section>
+    <section id="settings" class="tabPanel hidden">
+      <div class="card">
+        <h2>Einstellungen</h2>
+        <p class="muted">Hier kannst du die gesamte Datenbank löschen. Diese Aktion kann nicht rückgängig gemacht werden.</p>
+        <button id="clearAll" class="danger">Alle Daten löschen</button>
+      </div>
+    </section>
+  </div>
 </main>
 
 <footer>
@@ -180,10 +208,6 @@
 </footer>
 
 <script src="app.js"></script>
-<script>
-  if ("serviceWorker" in navigator) {
-    window.addEventListener("load", () => navigator.serviceWorker.register("./sw.js"));
-  }
-</script>
+<!-- KEINE Service-Worker-Registrierung mehr -->
 </body>
 </html>
